# embedded

./: .gitignore  CMakeLists.txt  README.md
algorithms_data_structures/neso_academy_data_structures/: 0001-bubblesort.c  0003-1d-array.c  0004-bitwise.c  0006-matrix.c  0007-memory.c  0008-padding.c  0010-malloc_structures.c
boards/Node-Red-ESP8266-MQTT/: packages.txt  run.ino
boards/STM32Fx-MCU/: README.md
c/examples/: 0000-factorial.c  0001-anagram.c  0004-bit_field.c  0005-bit_operations.cpp  0007-check_substring.c  0008-check_substring_strcspn.c  0010-first_last.c  0012-hashTable.c  0013-hashTableList.c  0014-insertionsort.c  0015-intersection.c  0016-kthLarge.c  0017-list.c  0019-pack.c  0022-ptr_math.c  0023-restrict.c  0024-storage_vars.c  0025-storage_vars_ex2.c
c/src/: 0002-array_average.c  0003-binary_search.c  0006-bubblesort.c  0011-fizzbuzz.c  0018-list_practice.c  0020-palindrome.c  0021-practice_list_final.c  0026-strcspn.c
cpp/001-Basics/basic_IO/: main.cpp
cpp/002-Pointers_and_references/: main.cpp
cpp/003-Strings/: reformat.cpp
cpp/005-Init_list/: Player.cpp
cpp/007-Exception_handling/: ExClass.cpp  ExClassExtended.cpp  ExNoClass.cpp
cpp/009-STL/: tuple.cpp
cpp/011-Lambdas/: functor.cpp
cpp/snippets/: README.md
cpp/snippets/014-UnitTests/002-FactoryTestExample/: CMakeLists.txt
cpp/snippets/014-UnitTests/002-FactoryTestExample/test/: unit_test.cc
data_structures/neso_academy_data_structures/: 0002-symmetric_difference.cpp  0005-conditional.c  0009-memset_structures.c  0011-linked_list.c
mcu/Node-Red-ESP8266-MQTT/: README.md
(+125 files in other folders)
